[package]
name = "wondamart_api"
version = "0.1.1"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.50", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "time", "json", "bigdecimal"] }
tower-http = { version = "0.6.8", features = ["cors"] }
chrono = { version = "0.4.44", features = ["serde"] }
time = { version = "0.3.47", features = ["serde", "parsing", "formatting"] }
zod-rs = { version = "0.4.0", features = ["axum"] }
serde_json = "1.0.149"
zod-rs-util = "0.4.0"
firebase-auth = "0.5.1"
tower = "0.5.3"
jsonwebtoken = "10.3.0"
reqwest = { version = "0.13.2", features = ["json"] }
futures = "0.3.32"
log = "0.4.29"
env_logger = "0.11.10"
async-trait = "0.1.89"
